bynkc/tests/fixtures/negative/105_list_distinct_not_keyable/input.bynk
commons c {
  type Item = {
    id: Int,
  }
  fn bad(items: List[Item]) -> List[Item] {
    items.distinct()
  }
}
